--- a/_config.yml
+++ b/_config.yml
@@ -27,23 +27,23 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://sw1p3rino.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: sw1p3rino            # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: sw1p3rino            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com             # change to your email address
+  name: Martin Fuchs
+  email: martin.swiper.fuchs@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/sw1p3rino     # change to your twitter homepage
+    - https://github.com/sw1p3rino       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
